--- a/style.css
+++ b/style.css
@@ -328,6 +328,10 @@ input[type=submit]:hover{
     font-size: 35px;
 }
 
+#dropdown{
+    display: none;
+}
+
 @media screen and (max-width: 640px) {
     #hero-beans{
         width: 100vw;
@@ -379,4 +383,80 @@ input[type=submit]:hover{
         grid-column: 1/2;
         grid-row: 4/5;
     }
+
+    .contact-section{
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .contact-img-wrapper{
+        background-image: none;
+    }
+
+    #contact-heading{
+        color: #451F11;
+        text-align: right;
+        margin-bottom: 0px;
+    }
+
+    .form-wrapper{
+        width: 80%;
+    }
+
+    .footer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-link{
+        margin-left: 35px;
+    }
+
+    #nav-social, #nav-text{
+        display: none;
+    }
+
+    #navbar{
+        justify-content: flex-end;
+    }
+
+    #dropdown{
+        display: flex;
+        flex-direction: column;
+        padding: 25px;
+    }
+
+    #dropdown-button{
+        background-image: url("img/drop_down.svg");
+        background-size: cover;
+        height: 30px;
+        width: 40px;
+    }
+
+    #dropdown-content{
+        display: none;
+        flex-direction: column;
+        
+        position: absolute;
+        margin-top: 30px;
+        right: 0px;
+        min-width: 160px;
+    }
+
+    #dropdown:hover #dropdown-content{
+        display: flex;
+    }
+
+    .link{
+        padding: 25px;
+        text-decoration: none;
+        color: black;
+    }
+
+    .link:hover{
+        background-color: red;
+    }
+
+
+
 }
